[Feat]2차 과제 완료

--- a/SeSAC_Network/SeSAC_Network/Base.lproj/Main.storyboard
+++ b/SeSAC_Network/SeSAC_Network/Base.lproj/Main.storyboard
@@ -75,6 +75,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Urc-BS-sT7" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I6q-ry-vSt">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -87,17 +88,86 @@
             </objects>
             <point key="canvasLocation" x="139.69465648854961" y="-2.1126760563380285"/>
         </scene>
-        <!--Beer-->
+        <!--BeerViewController-->
         <scene sceneID="hCe-DK-9kJ">
             <objects>
-                <viewController id="rIh-nZ-roL" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BeerViewController" title="BeerViewController" id="rIh-nZ-roL" customClass="BeerViewController" customModule="SeSAC_Network" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q8V-jT-ddq">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tmb-j8-rAN">
+                                <rect key="frame" x="16" y="91" width="361" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5EX-Lj-Zxr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rOz-c6-VPd">
+                                <rect key="frame" x="96.666666666666686" y="153" width="200" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rOz-c6-VPd" secondAttribute="height" multiplier="1:1.5" id="Zut-Wd-wae"/>
+                                    <constraint firstAttribute="height" constant="300" id="jDo-hR-6PI"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mVB-0e-NDY">
+                                <rect key="frame" x="16" y="547" width="361" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B63-kp-dAf">
+                                <rect key="frame" x="159" y="702" width="75" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="qlM-D8-47Z"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="recommendButtonTapped:" destination="rIh-nZ-roL" eventType="touchUpInside" id="pBf-rQ-qsP"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAf-lp-3zU">
+                                <rect key="frame" x="16" y="485" width="361" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="TPU-Jk-XvP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="1OM-Vc-DZU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="B63-kp-dAf" firstAttribute="centerX" secondItem="Q8V-jT-ddq" secondAttribute="centerX" id="1l9-PW-F4R"/>
+                            <constraint firstItem="1OM-Vc-DZU" firstAttribute="bottom" secondItem="B63-kp-dAf" secondAttribute="bottom" constant="32" id="5vX-Oa-xEI"/>
+                            <constraint firstItem="Tmb-j8-rAN" firstAttribute="leading" secondItem="1OM-Vc-DZU" secondAttribute="leading" constant="16" id="ABi-Pc-ZSR"/>
+                            <constraint firstItem="AAf-lp-3zU" firstAttribute="leading" secondItem="1OM-Vc-DZU" secondAttribute="leading" constant="16" id="ADp-0m-c7Q"/>
+                            <constraint firstItem="rOz-c6-VPd" firstAttribute="top" secondItem="Tmb-j8-rAN" secondAttribute="bottom" constant="32" id="M46-LX-egI"/>
+                            <constraint firstItem="mVB-0e-NDY" firstAttribute="top" secondItem="AAf-lp-3zU" secondAttribute="bottom" constant="32" id="Mgi-EZ-Tgd"/>
+                            <constraint firstItem="1OM-Vc-DZU" firstAttribute="trailing" secondItem="mVB-0e-NDY" secondAttribute="trailing" constant="16" id="NiW-6Z-6Xp"/>
+                            <constraint firstItem="1OM-Vc-DZU" firstAttribute="trailing" secondItem="Tmb-j8-rAN" secondAttribute="trailing" constant="16" id="cub-Ex-yOY"/>
+                            <constraint firstItem="1OM-Vc-DZU" firstAttribute="trailing" secondItem="AAf-lp-3zU" secondAttribute="trailing" constant="16" id="eh1-pH-N5L"/>
+                            <constraint firstItem="mVB-0e-NDY" firstAttribute="leading" secondItem="1OM-Vc-DZU" secondAttribute="leading" constant="16" id="fgw-xC-ex6"/>
+                            <constraint firstItem="Tmb-j8-rAN" firstAttribute="top" secondItem="1OM-Vc-DZU" secondAttribute="top" constant="32" id="hO4-YC-y5B"/>
+                            <constraint firstItem="B63-kp-dAf" firstAttribute="top" relation="greaterThanOrEqual" secondItem="mVB-0e-NDY" secondAttribute="bottom" constant="32" id="hgB-dV-rVI"/>
+                            <constraint firstItem="rOz-c6-VPd" firstAttribute="centerX" secondItem="Q8V-jT-ddq" secondAttribute="centerX" id="pjM-yn-r1m"/>
+                            <constraint firstItem="1OM-Vc-DZU" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mVB-0e-NDY" secondAttribute="trailing" constant="16" id="wBc-qP-UKm"/>
+                            <constraint firstItem="mVB-0e-NDY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1OM-Vc-DZU" secondAttribute="leading" constant="16" id="wOi-MT-g4d"/>
+                            <constraint firstItem="AAf-lp-3zU" firstAttribute="top" secondItem="rOz-c6-VPd" secondAttribute="bottom" constant="32" id="xAF-5P-wwn"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Beer" id="4G4-HK-naQ"/>
+                    <connections>
+                        <outlet property="beerImage" destination="rOz-c6-VPd" id="DQI-OB-Bl0"/>
+                        <outlet property="beerNameLabel" destination="AAf-lp-3zU" id="CY9-0Z-srC"/>
+                        <outlet property="descriptionLabel" destination="mVB-0e-NDY" id="bcv-xb-ROj"/>
+                        <outlet property="recommendButton" destination="B63-kp-dAf" id="PYW-qD-oag"/>
+                        <outlet property="titleLabel" destination="Tmb-j8-rAN" id="Oe3-ds-ZY2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lku-Tt-G0s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
